Closed Bug 349655 Opened 19 years ago Closed 19 years ago

[FIX] Table border rendering error, for TABLE w/ BORDERCOLOR

Categories

(Core :: Layout: Tables, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: Rolf.Sponsel, Assigned: MatsPalmgren_bugz)

Details

(Keywords: compat, testcase)

Attachments

(6 files)

User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:1.8.0.6) Gecko/20060729 SeaMonkey/1.0.4 Build Identifier: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:1.8.0.6) Gecko/20060729 SeaMonkey/1.0.4 SeaMonkey 1.0 (and onward) and Firefox 1.5 (verified for 1.5.0.6) fail to render the horizontal (and vertical?) borders of a table correctly. Reproducible: Always Steps to Reproduce: 1. Load the test case page provided as an attachment in e.g. SeaMonkey 1.0.x or Firefox 1.5.0.6 and compare to when loading in e.g. Mozilla Application Suite 1.7.x or Firefox 1.0.x. Actual Results: A table with yellow background, black text is displayed and horizontal border lines is displayed. No vertical border lines. The upper horizontal border line is vaguely "milky" red and the lower one appears to be "overwritten" (red?) by a black line. Expected Results: The horizontal border lines of the yellow table should be red (and of the same intensity). The test case has been verified with Mozilla Application Suite 1.7.12, Firefox 1.0.8, Internet Explorer 3.02, Netscape 4.79 and Konquerer 3.5, and all seem to render the table correctly. I'll soon upload a testcase, and snapshots of rendering in MAS and SM.
To be loaded into the browser.
Attached image Expected result
This shows the expected result.
Attached image Actual result
And here is the actual result.
Probably a dupe. And related to the 1px rounding bug.
Keywords: testcase
Attached file Testcase #2
Assignee: nobody → mats.palmgren
Severity: normal → minor
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Table border rendering error, for TABLE w/ FRAME=HSIDES RULES=NONE → Table border rendering error, for TABLE w/ BORDERCOLOR
Test results: IE7b2 Windows XPSP2: bordercolor attr implies solid border style, in both Back/CSS1compat modes. Opera8/9 on Linux: does not seem to implement bordercolor attr. Safari(nightly): bordercolor attr implies solid border style, but it does not seem to implement frame/rules attrs. (I checked frame/frameset also and our current rendering looked ok to me.)
Keywords: compat
Summary: Table border rendering error, for TABLE w/ BORDERCOLOR → [FIX] Table border rendering error, for TABLE w/ BORDERCOLOR
Attached patch Patch rev. 1Splinter Review
I don't see any reason why we should implement the 'bordercolor' attribute differently from IE/Safari. (The remaining differences to other UAs for the testcases are IMO bugs in the other UAs)
Attachment #235060 - Flags: superreview?(bzbarsky)
Attachment #235060 - Flags: review?(bzbarsky)
Comment on attachment 235060 [details] [diff] [review] Patch rev. 1 Looks reasonable.
Attachment #235060 - Flags: superreview?(bzbarsky)
Attachment #235060 - Flags: superreview+
Attachment #235060 - Flags: review?(bzbarsky)
Attachment #235060 - Flags: review+
Checked in on trunk at 2006-08-23 15:37 PDT. -> FIXED
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: