Make bordercolor attribute imply border-style:solid (for compat reasons). b=349655 r+sr=bzbarsky